--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,6 @@ jobs:
           dockerFile: Dockerfile
           imageName: xosvip/chatccc
           tag: latest
-          platform: linux/amd64
+          platform: linux/amd64,linux/arm64
           dockerUser: ${{ secrets.DOCKER_USERNAME }}
           dockerPassword: ${{ secrets.DOCKER_PASSWORD }}
